mandando dados para email

--- a/pages/phase_07.html
+++ b/pages/phase_07.html
@@ -510,22 +510,63 @@
                   qual foi a sua lógica para a resolução das questões:
                 </p>
 
-                <div class="form-check">
-                  <textarea
-                    class="form-control mb-1"
-                    name="logic"
-                    rows="4"
-                  ></textarea>
+                <form
+                  action="https://formsubmit.co/metodologiasageis41@gmail.com"
+                  method="POST"
+                >
+                  <div class="form-check">
+                    <input data-nickname type="hidden" name="nickname" />
+                    <input
+                      data-first-question
+                      type="hidden"
+                      name="questao_um"
+                    />
+                    <input
+                      data-second-question
+                      type="hidden"
+                      name="questao_dois"
+                    />
+                    <input
+                      data-third-question
+                      type="hidden"
+                      name="questao_tres"
+                    />
+                    <input
+                      data-fourth-question
+                      type="hidden"
+                      name="questao_quatro"
+                    />
+                    <input
+                      data-fifth-question
+                      type="hidden"
+                      name="questao_cinco"
+                    />
+                    <input
+                      data-sixth-question
+                      type="hidden"
+                      name="questao_seis"
+                    />
+                    <input
+                      data-seventh-question
+                      type="hidden"
+                      name="questao_sete"
+                    />
 
-                  <a
-                    id="data-submit-logic"
-                    href="#"
-                    class="btn btn-primary disabled"
-                    download
-                  >
-                    Enviar
-                  </a>
-                </div>
+                    <textarea
+                      class="form-control mb-1"
+                      name="logica"
+                      rows="4"
+                    ></textarea>
+
+                    <button
+                      id="data-submit-logic"
+                      type="submit"
+                      class="btn btn-primary disabled"
+                    >
+                      Enviar
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
