posicionamento dos ballooons texts

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -73,7 +73,7 @@
             <p id="text-ballon-amadillo">
               Que velocidade minama eu devo manter para chegar a salvo em minha toca:
             </p>
-            <div class="d-flex flex-column align-items-center gap-3">
+            <div class="d-flex align-items-center gap-3">
               <div class="form-check">
                 <input role="button" type="radio" name="velocity" class="form-check-input" id="radio5" />
                 <label class="text-black" for="radio5"></label>
