--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -73,7 +73,7 @@
             <p id="text-ballon-amadillo">
               Que velocidade minama eu devo manter para chegar a salvo em minha toca:
             </p>
-            <div class="d-flex align-items-center gap-3">
+            <div class="d-flex align-items-center justify-content-center gap-3">
               <div class="form-check">
                 <input role="button" type="radio" name="velocity" class="form-check-input" id="radio5" />
                 <label class="text-black" for="radio5"></label>
@@ -105,6 +105,12 @@
             </div>
           </div>
         </div>
+        <div class="fox-balloon-next-desktop d-none">
+          <p>Tenho que ser mais rapido na proxima</p>
+          <button data-next-challenge-desktop class="btn btn-success d-block">
+            Proxímo desafio
+          </button>
+        </div>
       </div>
 
       <!-- MRU -->
@@ -115,129 +121,6 @@
       <div data-fox class="object-2 position-absolute">
         <div class="fox"></div>
       </div>
-
-      <!-- Modal para mostrar a questão (desktop) 
-      <div id="question-desktop" class="modal fade">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">
-                A velocidade
-                <strong>mínima necessária</strong> do tatu para que ele fuja
-                do predador é de, aproximadamente:
-                <br />
-              </h5>
-            </div>
-
-            <div class="modal-body">
-              <div class="d-flex flex-row justify-content-center align-items-center gap-3">
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio5" />
-                  <label class="text-black" for="radio5"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio6" />
-                  <label class="text-black" for="radio6"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio7" />
-                  <label class="text-black" for="radio7"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio8" />
-                  <label class="text-black" for="radio8"></label>
-                </div>
-              </div>
-
-              <br />
-
-              <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância atual entre eles é de
-                <span class="dist-between"></span>. A distância entre o tatu e
-                sua toca é de <span class="position-until-end"></span>.
-                Considere a raposa com velocidade constante igual a
-                <span class="fox-velocity-desktop"></span>m/s e o tempo de
-                encontro dela com o tatu é de
-                <span class="crash-time-desktop"></span>.
-              </p>
-            </div>
-
-            <div class="modal-footer">
-              <button data-submit-answer-desktop type="button" class="btn btn-success" data-bs-dismiss="modal" disabled>
-                Confirmar
-              </button>
-
-              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" aria-label="Fechar">
-                Fechar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      Modal para mostrar a questão (mobile) 
-      <div id="question-mobile" class="modal fade">
-        <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">
-                A velocidade mínima
-                <strong>necessária</strong> do tatu para que ele fuja do
-                predador é de, aproximadamente:
-                <br />
-              </h5>
-            </div>
-
-            <div class="modal-body">
-              <div class="d-flex flex-row justify-content-center align-items-center gap-3">
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio1" />
-                  <label class="text-black" for="radio1"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio2" />
-                  <label class="text-black" for="radio2"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio3" />
-                  <label class="text-black" for="radio3"></label>
-                </div>
-
-                <div class="form-check">
-                  <input role="button" type="radio" name="velocity" class="form-check-input" id="radio4" />
-                  <label class="text-black" for="radio4"></label>
-                </div>
-              </div>
-              <br />
-              <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de
-                <span class="dist-between"></span>. A distância entre o tatu e
-                sua toca é de <span class="position-until-end"></span>.
-                Considere a raposa com velocidade constante igual a
-                <span class="fox-velocity-mobile"></span>m/s e o tempo de
-                encontro dela com o tatu é de
-                <span class="crash-time-mobile"></span>.
-              </p>
-            </div>
-
-            <div class="modal-footer">
-              <button data-submit-answer-mobile type="button" class="btn btn-success btn-sm" data-bs-dismiss="modal"
-                disabled>
-                Confirmar
-              </button>
-
-              <button type="button" class="btn btn-danger btn-sm" data-bs-dismiss="modal" aria-label="Fechar">
-                Fechar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div> -->
 
       <!-- Modal para próximo desafio (mobile) -->
       <div id="next-challenge-modal-mobile" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -256,48 +139,6 @@
               </button>
               <a data-next-page-mobile href="./phase_05.html" class="btn btn-primary d-none" role="button">
                 Próximo desafio
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal para próximo desafio (desktop) -->
-      <div id="next-challenge-modal-desktop" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
-            </div>
-            <div class="modal-body">
-              <p class="textWin">Este desafio acabou! Siga para o próximo</p>
-            </div>
-            <div class="modal-footer">
-              <button data-next-challenge-desktop class="btn btn-success d-block">
-                Proxímo desafio
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal para a próxima fase (mobile) -->
-      <div id="next-phase-modal-mobile" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Fim da fase</h5>
-            </div>
-
-            <div class="modal-body">
-              <p>Esta fase acabou, siga para a próxima!</p>
-            </div>
-
-            <div class="modal-footer">
-              <a href="./phase_05.html" role="button" class="btn btn-primary btn-sm">
-                Próxima fase
               </a>
             </div>
           </div>
