animações da rapoza e tatu

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -104,7 +104,7 @@
 
       <!-- MRU -->
       <div data-armadillo class="object position-absolute">
-        <div id="armadillo" class="armadillo"></div>
+        <div class="armadilloIsMoving"></div>
       </div>
 
       <div data-fox class="object-2 position-absolute">
