--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -100,6 +100,13 @@
             Proxímo desafio
           </button>
         </div>
+        <div class="fox-balloon-win-desktop d-none">
+          <p>Hoje o almoço esta garantido</p>
+          <button data-reset-desktop class="btn btn-danger" data-bs-dismiss="modal">
+            Fechar
+            <i class="bi bi-pause"></i>
+          </button>
+        </div>
       </div>
 
       <!-- MRU -->
@@ -200,49 +207,6 @@
         </div>
       </div>
 
-      <!-- Modal para informar uma nova tentativa (mobile)-->
-      <div id="game-over-modal-mobile" class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog"
-        aria-labelledby="modalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Resposta errada</h5>
-            </div>
-            <div class="modal-body">
-              <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
-            </div>
-            <div class="modal-footer">
-              <button data-reset-mobile class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-                Fechar
-                <i class="bi bi-pause"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal para informar uma nova tentativa (desktop) -->
-      <div id="game-over-modal-desktop" class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog"
-        aria-labelledby="modalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
-            </div>
-
-            <div class="modal-body">
-              <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
-            </div>
-
-            <div class="modal-footer">
-              <button data-reset-desktop class="btn btn-danger" data-bs-dismiss="modal">
-                Fechar
-                <i class="bi bi-pause"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!-- Modal para mostrar que o número de tentaivas acabou (mobile) -->
       <div id="attemptsGoneModal-mobile" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
