--- a/pages/phase_01.html
+++ b/pages/phase_01.html
@@ -34,7 +34,7 @@
       <header class="w-75 d-flex justify-content-around align-items-center p-1">
         <div class="d-flex align-items-center">
           <i class="ph-fill ph-timer" style="color: white"></i>
-          <p data-timer-display class="text-white m-0">3:00</p>
+          <p data-timer-display class="text-white m-0">03:00</p>
         </div>
       </header>
 
@@ -420,6 +420,8 @@
         <div
           id="game-over-modal-mobile"
           class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
           tabindex="-1"
           role="dialog"
           aria-labelledby="modalLabel"
@@ -429,12 +431,6 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title">Resposta errada</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
               <div class="modal-body">
                 <p class="textWin">
@@ -459,6 +455,8 @@
         <div
           id="game-over-modal-desktop"
           class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
           tabindex="-1"
           role="dialog"
           aria-labelledby="modalLabel"
@@ -468,12 +466,6 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
               <div class="modal-body">
                 <p class="textWin">
