--- a/pages/phase_06.html
+++ b/pages/phase_06.html
@@ -32,7 +32,7 @@
       <header class="w-75 d-flex justify-content-around align-items-center p-1">
         <div class="d-flex justify-content-center align-items-center">
           <i class="ph-fill ph-timer" style="color: white"></i>
-          <p data-timer-display class="text-white m-0">3:00</p>
+          <p data-timer-display class="text-white m-0">03:00</p>
         </div>
       </header>
 
@@ -419,7 +419,7 @@
           </div>
         </div>
 
-        <!-- Modal para informar uma nova tentativa (mobile)-->
+        <!-- Modal para informar que a resposta está errada (mobile)-->
         <div
           id="game-over-modal-mobile"
           class="modal fade"
@@ -432,31 +432,27 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title">Resposta errada</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
               <div class="modal-body">
-                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+                <p class="textWin">
+                  Não foi dessa vez! Siga para o próximo desafio.
+                </p>
               </div>
               <div class="modal-footer">
-                <button
-                  data-reset
+                <a
+                  href="./phase_07.html"
+                  role="button"
                   class="btn btn-danger btn-sm"
-                  data-bs-dismiss="modal"
                 >
-                  Fechar
+                  Próximo desafio
                   <i class="bi bi-pause"></i>
-                </button>
+                </a>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Modal para informar uma nova tentativa (desktop) -->
+        <!-- Modal para informar que a resposta está errada (desktop) -->
         <div
           id="game-over-modal-desktop"
           class="modal fade"
@@ -469,25 +465,21 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
               <div class="modal-body">
-                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+                <p class="textWin">
+                  Não foi dessa vez! Siga para o próxima desafio.
+                </p>
               </div>
               <div class="modal-footer">
-                <button
-                  data-reset
-                  class="btn btn-danger"
-                  data-bs-dismiss="modal"
+                <a
+                  href="./phase_07.html"
+                  role="button"
+                  class="btn btn-danger btn-sm"
                 >
-                  Fechar
+                  Próximo desafio
                   <i class="bi bi-pause"></i>
-                </button>
+                </a>
               </div>
             </div>
           </div>
