responsividade dos baloes de texto

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -50,17 +50,17 @@
         <div class="fox-balloon d-none">
           <p class="text-center">
             Se eu manter uma velocidade constante de
-            <span class="fox-velocity"></span>m/s, eu alcanço Tito em
-            <span class="crash-time"></span>.
+            <strong><span class="fox-velocity"></span>m/s</strong>
+            , eu alcanço Tito em <strong><span class="crash-time"></span></strong>.
           </p>
         </div>
         <div class="amadillo-balloon d-none">
           <div class="text-center">
             <p id="text-ballon-amadillo">
-              Que velocidade mínima eu devo manter para chegar a salvo em
+              Que <strong>velocidade mínima</strong> eu devo manter para chegar a salvo em
               minha toca:
             </p>
-            <div class="d-flex align-items-center justify-content-center gap-3">
+            <div class="d-flex align-items-center justify-content-center gap-2">
               <div class="form-check">
                 <input role="button" type="radio" name="velocity" class="form-check-input" id="radio5" />
                 <label class="text-black" for="radio5"></label>
@@ -81,7 +81,7 @@
                 <label class="text-black" for="radio8"></label>
               </div>
             </div>
-            <div class="pt-3">
+            <div class="group-btn">
               <button data-submit-answer type="button" class="btn btn-success" data-bs-dismiss="modal" disabled>
                 Confirmar
               </button>
@@ -100,8 +100,8 @@
         </div>
         <div class="fox-balloon-win d-none">
           <p>Hoje o almoço esta garantido</p>
-          <button data-reset-desktop class="btn btn-danger" data-bs-dismiss="modal">
-            Fechar
+          <button data-reset class="btn btn-danger" data-bs-dismiss="modal">
+            Tentar Novamente
             <i class="bi bi-pause"></i>
           </button>
         </div>
