regularização do tamanho dos botoes

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -14,7 +14,7 @@
 <body class="bg-dark">
   <section id="initial-screen" class="d-block w-100 position-absolute">
     <div class="d-flex justify-content-center align-items-center vh-100">
-      <button data-start-game class="btn btn-primary d-none d-lg-inline">
+      <button data-start-game class="btn-mobile btn btn-primary d-none d-lg-inline">
         Começar jogo
       </button>
     </div>
@@ -82,11 +82,12 @@
               </div>
             </div>
             <div class="group-btn">
-              <button data-submit-answer type="button" class="btn btn-success" data-bs-dismiss="modal" disabled>
+              <button data-submit-answer type="button" class="btn-mobile btn btn-success" data-bs-dismiss="modal"
+                disabled>
                 Confirmar
               </button>
 
-              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" aria-label="Fechar">
+              <button type="button" class="btn-mobile btn btn-danger" data-bs-dismiss="modal" aria-label="Fechar">
                 Fechar
               </button>
             </div>
@@ -94,13 +95,13 @@
         </div>
         <div class="fox-balloon-next d-none">
           <p>Tenho que ser mais rápido na próxima</p>
-          <button data-next-challenge class="btn btn-success d-block">
+          <button data-next-challenge class="btn-mobile btn btn-success d-block">
             Proxímo desafio
           </button>
         </div>
         <div class="fox-balloon-win d-none">
           <p>Hoje o almoço esta garantido</p>
-          <button data-reset class="btn btn-danger" data-bs-dismiss="modal">
+          <button data-reset class="btn-mobile btn btn-danger" data-bs-dismiss="modal">
             Tentar Novamente
             <i class="bi bi-pause"></i>
           </button>
@@ -128,10 +129,10 @@
               <p class="textWin">Este desafio acabou! Siga para o próximo</p>
             </div>
             <div class="modal-footer">
-              <button data-next-challenge-mobile class="btn btn-success d-block">
+              <button data-next-challenge-mobile class="btn-mobile btn btn-success d-block">
                 Proxímo desafio
               </button>
-              <a data-next-page-mobile href="./phase_05.html" class="btn btn-primary d-none" role="button">
+              <a data-next-page-mobile href="./phase_05.html" class="btn-mobile btn btn-primary d-none" role="button">
                 Próximo desafio
               </a>
             </div>
@@ -151,7 +152,7 @@
               <p class="textWin">Este desafio acabou! Siga para o próximo</p>
             </div>
             <div class="modal-footer">
-              <button data-next-challenge-desktop class="btn btn-success d-block">
+              <button data-next-challenge-desktop class="btn-mobile btn btn-success d-block">
                 Proxímo desafio
               </button>
             </div>
