correção do botão que começa o game

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -14,7 +14,7 @@
 <body class="bg-dark">
   <section id="initial-screen" class="d-block w-100 position-absolute">
     <div class="d-flex justify-content-center align-items-center vh-100">
-      <button data-start-game class="btn-mobile btn btn-primary d-none d-lg-inline">
+      <button data-start-game class="btn-mobile btn btn-primary">
         Começar jogo
       </button>
     </div>
