--- a/pages/phase_02.html
+++ b/pages/phase_02.html
@@ -153,7 +153,7 @@
                       <label class="btn" for="radio-one">
                         <figure class="figure">
                           <img
-                            src="../src/images/velocidade_tempo.png"
+                            src="../src/images/Velocidade (m_s) x Tempo(s).png"
                             class="figure-img img-fluid rounded img-thumbnail"
                             alt="Gráfico velocidadeXtempo"
                           />
@@ -171,7 +171,7 @@
                       <label class="btn" for="radio-two">
                         <figure class="figure">
                           <img
-                            src="../src/images/posicao_tempo.png"
+                            src="../src/images/Velocidade (m_s) x Tempo(s) 2.png"
                             class="figure-img img-fluid rounded img-thumbnail"
                             alt="Gráfico distanciaXtempo"
                           />
@@ -235,7 +235,7 @@
                       <label class="btn" for="radio-three">
                         <figure class="figure">
                           <img
-                            src="../src/images/velocidade_tempo.png"
+                            src="../src/images/Velocidade (m_s) x Tempo(s).png"
                             class="figure-img img-fluid rounded img-thumbnail"
                             alt="Gráfico velocidadeXtempo"
                           />
@@ -254,7 +254,7 @@
                       <label class="btn" for="radio-four">
                         <figure class="figure">
                           <img
-                            src="../src/images/posicao_tempo.png"
+                            src="../src/images/Velocidade (m_s) x Tempo(s) 2.png"
                             class="figure-img img-fluid rounded img-thumbnail"
                             alt="Gráfico distanciaXtempo"
                           />
