--- a/pages/phase_06.html
+++ b/pages/phase_06.html
@@ -153,9 +153,9 @@
                       <label class="btn" for="radio-one">
                         <figure class="figure">
                           <img
-                            src="../src/images/velocityXtime.png"
+                            src="../src/images/Posição (m) x Tempo(s) 2.png"
                             class="figure-img img-fluid rounded img-thumbnail"
-                            alt="Gráfico velocidadeXtempo"
+                            alt="Gráfico posiçãoXtempo (errado)"
                           />
                         </figure>
                       </label>
@@ -172,9 +172,9 @@
                       <label class="btn" for="radio-two">
                         <figure class="figure">
                           <img
-                            src="../src/images/positionXtime.png"
+                            src="../src/images/Posição (m) x Tempo(s).png"
                             class="figure-img img-fluid rounded img-thumbnail"
-                            alt="Gráfico distanciaXtempo"
+                            alt="Gráfico posiçãoXtempo (certo)"
                           />
                         </figure>
                       </label>
@@ -236,9 +236,9 @@
                       <label class="btn" for="radio-three">
                         <figure class="figure">
                           <img
-                            src="../src/images/velocityXtime.png"
+                            src="../src/images/Posição (m) x Tempo(s) 2.png"
                             class="figure-img img-fluid rounded img-thumbnail"
-                            alt="Gráfico velocidadeXtempo"
+                            alt="Gráfico posiçãoXtempo (errado)"
                           />
                         </figure>
                       </label>
@@ -255,9 +255,9 @@
                       <label class="btn" for="radio-four">
                         <figure class="figure">
                           <img
-                            src="../src/images/positionXtime.png"
+                            src="../src/images/Posição (m) x Tempo(s).png"
                             class="figure-img img-fluid rounded img-thumbnail"
-                            alt="Gráfico distanciaXtempo"
+                            alt="Gráfico posiçãoXtempo (certo)"
                           />
                         </figure>
                       </label>
